src/test/deca/codegen/valid/homemade/test/test_depassement_registre_plus.deca
{
    int a = 1+(1+(1+(1+(1))));
    println(a);
}