src/test/deca/codegen/invalid/homemade/test/test_complet_affectation_int_float.deca
{
    int x = 3.1;
}